# your-repo

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/your_package_name/: __init__.py  core.py
tests/: test_core.py
